tests/api/reference/negative/12-list-slice-range.asm
const invalid: list = list.slice(list.of(1, 2), 1, 2)
